new ajust swagger
